--- a/tacs2016c1/pom.xml
+++ b/tacs2016c1/pom.xml
@@ -83,6 +83,11 @@
 			<version>${jackson.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.9.3</version>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
