--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,10 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 		<spring.version>4.2.5.RELEASE</spring.version>
 		<jackson.version>2.6.3</jackson.version>
+		<junit.version>4.12</junit.version>
+		<mockito.version>1.10.19</mockito.version>
+		<jsonpath.version>1.2.0</jsonpath.version>
+		
 	</properties>
 	<dependencies>
 	<!--
@@ -88,6 +92,44 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.9.3</version>
 		</dependency>
+
+		<!-- test -->		
+		<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        
+		<dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>${spring.version}</version>
+		    <scope>test</scope>
+		</dependency>
+
+		<dependency>
+		    <groupId>com.jayway.jsonpath</groupId>
+		    <artifactId>json-path</artifactId>
+		    <version>${jsonpath.version}</version>
+		    <scope>test</scope>
+		</dependency>
+
+		<dependency>
+		    <groupId>com.jayway.jsonpath</groupId>
+		    <artifactId>json-path-assert</artifactId>
+		    <version>${jsonpath.version}</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		
 	</dependencies>
 	<profiles>
 		<profile>
